Ensure that application of end user network policy does not affect traffic between EnMasse components (#5048)
* Fix #5047: Ensure that application of end user network policy does not affect traffic between EnMasse components.